
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int ssa ;
typedef int so ;
typedef int sa ;


 int AF_INET ;
 int INADDR_ANY ;
 int IPPROTO_TCP ;
 int SOCK_STREAM ;
 int SOL_SOCKET ;
 int SO_REUSEADDR ;
 int SO_REUSEPORT ;
 int accept (int,struct sockaddr*,int*) ;
 int bind (int,struct sockaddr*,int) ;
 int bzero (char*,int) ;
 int close (int) ;
 int dprintf (int,char*) ;
 int ftpd_read (int) ;
 int htons (int) ;
 int listen (int,int) ;
 int printe (char*,int) ;
 int printf (char*) ;
 int setsockopt (int,int ,int ,void*,int) ;
 int socket (int ,int ,int ) ;

void ftpd(void){
 int ssock,sock,salen,so=1,i=0;
 struct sockaddr_in ssa,sa;
 ssock=socket(AF_INET,SOCK_STREAM,IPPROTO_TCP);

 setsockopt(ssock,SOL_SOCKET,SO_REUSEADDR,(void *)&so,sizeof(so));




 ssa.sin_family=AF_INET;

 ssa.sin_port=htons(21);
 ssa.sin_addr.s_addr=INADDR_ANY;
 if(bind(ssock,(struct sockaddr *)&ssa,sizeof(ssa))==-1)
  printe("could not bind socket, ftpd already running?",1);
 listen(ssock,1);
 bzero((char*)&sa,sizeof(struct sockaddr_in));

 salen=sizeof(sa);
 sock=accept(ssock,(struct sockaddr *)&sa,&salen);
 close(ssock);
 printf("[*] ftp daemon connection established.\n");

 dprintf(sock,"220 FakeFTPD.\n");
 while(!i)
  i=ftpd_read(sock);
 close(sock);
 printf("[*] ftp daemon connection closed.\n");
 return;
}
